--- a/dotNet5782_8995_8035/PL/DroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/DroneWindow.xaml
@@ -6,11 +6,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="PL.DroneWindow"
-        
+        xmlns:Maps="using:Windows.UI.Xaml.Controls.Maps"
+    
+  
+    
+    
+    
         mc:Ignorable="d"
-        Title="DroneWindow" Height="450" Width="800" Loaded="Loded">
+        Title="" Height="450" Width="800" Loaded="Loded">
 
-
+    <!--xmlns:controls="clr-namespace:Microsoft.Toolkit.Wpf.UI.Controls;assembly=Microsoft.Toolkit.Wpf.UI.Controls"-->
 
     <Grid x:Name="AddingGrid" Height="434" VerticalAlignment="Center">
         <Grid.RowDefinitions>
@@ -30,49 +35,53 @@
         </Grid.ColumnDefinitions>
 
         <Label Content="Drone ID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="29" FontWeight="Bold"/>
-        <Label Content="Model" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Width="108" Height="29" Grid.ColumnSpan="2" Margin="146,0,0,0" FontWeight="Bold"/>
-        <Label Content="weight Category" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="29" FontWeight="Bold"/>
+        <Label Content="Model" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" Width="108" Height="29" Margin="0,2,0,0" FontWeight="Bold"/>
+        <Label Content="weight Category" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="29" FontWeight="Bold" Margin="0,33,0,0"/>
         <Label x:Name="WindowTitle" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="42" Width="278" RenderTransformOrigin="0.5,0.5" FontWeight="Bold" FontSize="24" AllowDrop="True" FontFamily="Ink Free" FontStyle="Normal" Margin="0,15,0,0" Background="#FFD1D1D1" Foreground="Blue"/>
 
 
-        <TextBox x:Name="DroneID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" TextChanged="DroneIdTextChanged" Margin="0,29,0,0" Height="23" Background="#FFD1D1D1"  />
-        <TextBox x:Name="Model" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" RenderTransformOrigin="0.596,0.084" Margin="0,29,0,0" Height="23" TextChanged="ModelUpdatedButtonClick" Grid.ColumnSpan="2" Background="#FFD1D1D1"/>
-        <ComboBox x:Name="Weight" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" Margin="0,30,0,0" FontWeight="Bold" />
+        <TextBox x:Name="DroneID" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" TextChanged="DroneIdTextChanged" Margin="0,3,0,0" Height="23" Background="#FFD1D1D1"  />
+        <TextBox x:Name="Model" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="2" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" RenderTransformOrigin="0.596,0.084" Margin="0,5,0,0" Height="23" TextChanged="ModelUpdatedButtonClick" Background="#FFD1D1D1"/>
+        <ComboBox x:Name="Weight" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" Margin="0,33,0,0" FontWeight="Bold" />
 
-        <Button x:Name="AddingButton" Content="Add New Drone" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="62" Width="400" Grid.ColumnSpan="2" Click="AddDroneButton" Background="#FFD1D1D1" FontWeight="Bold"/>
+        <Button x:Name="AddingButton" Content="Add New Drone" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="60" Width="300" Click="AddDroneButton" Background="#FFD1D1D1" FontWeight="Bold" Grid.Column="1" Grid.ColumnSpan="2"/>
         <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="32" Width="32" Click="XButton" Grid.Column="3" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Margin="168,10,0,0"/>
 
 
-        <Label x:Name="BatteryText" Content="Battery" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" FontWeight="Bold" />
-        <Label x:Name="BatteryLabel" Content="Label" Grid.Column="1" HorizontalAlignment="Center" Margin="0,36,0,0" Grid.Row="3" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" FontWeight="Bold"/>
-        <Label x:Name="StatusText" Content="Status" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Width="108" FontWeight="Bold"/>
-        <Label x:Name="StatusLabel" Content="Label" Grid.Column="2" HorizontalAlignment="Center" Margin="0,36,0,0" Grid.Row="3" VerticalAlignment="Top" Background="#FFD1D1D1" RenderTransformOrigin="0.57,0.52" Width="180" FontWeight="Bold"/>
-        <Label x:Name="ParcelText" Content="parcelId" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" Grid.ColumnSpan="2" Margin="146,0,0,0" FontWeight="Bold"/>
-        <Label x:Name="ParcelLabel" Content="Label" Grid.Column="1" HorizontalAlignment="Left" Margin="110,36,0,0" Grid.Row="4" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" Grid.ColumnSpan="2" FontWeight="Bold"/>
-        <Label x:Name="LocationText" Content="Location" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="132" FontWeight="Bold"/>
-        <Label x:Name="LongtudeText" Content="Label" Grid.Column="1" HorizontalAlignment="Center" Margin="0,31,0,0" Grid.Row="5" VerticalAlignment="Top" Width="180" FontWeight="Bold" Background="#FFD1D1D1"/>
-        <Label x:Name="LatitudeText" Content="Label" Grid.Column="2" HorizontalAlignment="Center" Margin="0,31,0,0" Grid.Row="5" VerticalAlignment="Top" RenderTransformOrigin="0.024,-0.193" Width="180" FontWeight="Bold" Background="#FFD1D1D1"/>
+        <Label x:Name="BatteryText" Content="Battery" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" FontWeight="Bold" Margin="0,31,0,0" />
+        <Label x:Name="BatteryLabel" Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,33,0,0" Grid.Row="2" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" FontWeight="Bold"/>
+        <Label x:Name="StatusText" Content="Status" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Width="108" FontWeight="Bold"/>
+        <Label x:Name="StatusLabel" Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,3,0,0" Grid.Row="3" VerticalAlignment="Top" Background="#FFD1D1D1" RenderTransformOrigin="0.57,0.52" Width="180" FontWeight="Bold"/>
+        <Label x:Name="ParcelText" Content="parcelId" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" Margin="0,27,0,0" FontWeight="Bold"/>
+        <Label x:Name="ParcelLabel" Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,31,0,0" Grid.Row="3" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" FontWeight="Bold"/>
+        <Label x:Name="LocationText" Content="Location" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Top" Width="132" FontWeight="Bold" Margin="0,14,0,0"/>
+        <Label x:Name="LongtudeText" Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,7,0,0" Grid.Row="4" VerticalAlignment="Top" Width="180" FontWeight="Bold" Background="#FFD1D1D1"/>
+        <Label x:Name="LatitudeText" Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,33,0,0" Grid.Row="4" VerticalAlignment="Top" RenderTransformOrigin="0.024,-0.193" Width="180" FontWeight="Bold" Background="#FFD1D1D1"/>
 
 
 
-        <Button x:Name="UpdateModel" Content="update model" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="42" Width="180" Click="UpdateModel_Click"  />
-        <Button x:Name="GoToCharge" Content="go to charge" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Center" Height="42" Width="180" Click="GoToCharge_Click"/>
-        <Button x:Name="ReliceDroneFromCharge" Content="Uncharge Drone" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Height="42" Width="98" Click="ReliceDroneFromCharge_Click" Margin="10,0,0,0"/>
+        <Button x:Name="UpdateModel" Content="update model" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Center" Height="42" Width="180" Click="UpdateModel_Click" Margin="5,0,0,0"  />
+        <Button x:Name="GoToCharge" Content="go to charge" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Center" Height="42" Width="180" Click="GoToCharge_Click" Margin="5,0,0,0"/>
+        <Button x:Name="ReliceDroneFromCharge" Content="Uncharge Drone" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Center" Height="42" Width="98" Click="ReliceDroneFromCharge_Click" Margin="5,0,0,0"/>
 
-        <TextBox x:Name="MinutesInput" HorizontalAlignment="Left" Margin="113,32,0,0" Grid.Row="4" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="82" TextChanged="MinutesInputChanged" FontSize="10" Height="20"/>
-        <Label x:Name="LabelMinutsInCharge" Content="Insert Minutes:" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" Height="22" Width="82" FontSize="8" Margin="113,7,0,0"/>
+        <TextBox x:Name="MinutesInput" HorizontalAlignment="Left" Margin="108,32,0,0" Grid.Row="3" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="82" TextChanged="MinutesInputChanged" FontSize="10" Height="20"/>
+        <Label x:Name="LabelMinutsInCharge" Content="Insert Minutes:" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Top" Height="22" Width="82" FontSize="8" Margin="108,7,0,0"/>
 
-        <Button x:Name="AssiningParcelToDrone" Content="Assining Parcel To Drone" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="42" Width="180" Click="AssiningParcelToDrone_Click" Grid.Column="3"/>
-        <Button x:Name="PickingUpAParcel" Content="Picking Up A Parcel" Grid.Column="3" HorizontalAlignment="Center" Margin="0,6,0,0" Grid.Row="3" VerticalAlignment="Top" Height="46" Width="180" Click="PickingUpAParcel_Click"/>
-        <Button x:Name="DliveringParcel" Content="Delivering Parcel" Grid.Column="3" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" RenderTransformOrigin="-1.666,-0.183" Height="41" Width="180" Click="DliveringParcel_Click"/>
+        <Button Name="DeliveringOption" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="5" VerticalAlignment="Top" Height="34" Width="174" Click="Button_Click"/>
 
 
+
+        <!--<Button x:Name="AssiningParcelToDrone" Content="Assining Parcel To Drone" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="42" Width="180" Click="AssiningParcelToDrone_Click"/>
+
+        <Button x:Name="PickingUpAParcel" Content="Picking Up A Parcel" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="46" Width="180" Click="PickingUpAParcel_Click"/>
+
+        <Button x:Name="DliveringParcel" Content="Delivering Parcel" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="-1.666,-0.183" Height="41" Width="180" Click="DliveringParcel_Click" Margin="0,12,0,0"/>-->
 
 
         <materialDesign:Flipper/>
+        <MediaElement Grid.Column="3" HorizontalAlignment="Left" Height="92" Margin="29,33,0,0" Grid.RowSpan="3" Grid.Row="1" VerticalAlignment="Top" Width="132"  />
 
-
-
+        <!--<MediaElement Source="file:images/ajax-loader.gif" LoadedBehavior="Play" Visibility="Visible" />-->
 
     </Grid>
 
