--- a/dotNet5782_8995_8035/PL/DroneWindow.xaml
+++ b/dotNet5782_8995_8035/PL/DroneWindow.xaml
@@ -1,83 +1,80 @@
 ﻿<Window
-        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-    
-    x:Class="PL.DroneWindow"
-    mc:Ignorable="d"
-        Title="" Height="450" Width="800" Loaded="Loded">
-
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="PL.DroneWindow"
+        xmlns:Maps="using:Windows.UI.Xaml.Controls.Maps"
+        mc:Ignorable="d"
+        Title="" 
+        Height="600"
+        Width="420"
+        Loaded="Loded">
+    <!--xmlns:controls="clr-namespace:Microsoft.Toolkit.Wpf.UI.Controls;assembly=Microsoft.Toolkit.Wpf.UI.Controls"-->
     <Window.Resources>
         <local:StateToText x:Key="stateToText"/>
     </Window.Resources>
 
-    <Grid x:Name="AddingGrid" Height="434" VerticalAlignment="Center">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+    <StackPanel Margin="5" Width="400" HorizontalAlignment="Left">
+        <Button Content="X" RenderTransformOrigin="-1.136,-0.1" Height="42" Width="48" Click="XButton" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" HorizontalAlignment="Right"/>
+        <StackPanel Margin="3" Orientation="Horizontal">
+            <Label Content="Drone ID" Width="108" />
+            <TextBox x:Name="DroneID" Text="" materialDesign:HintAssist.Hint="Drone ID"  Width="180" TextChanged="DroneIdTextChanged" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+        </StackPanel>
+        <StackPanel Margin="3" Orientation="Horizontal">
+            <Label Content="weight Category" Width="108"  />
+            <ComboBox x:Name="Weight" Text="" Width="180" materialDesign:HintAssist.Hint="weight Category" />
+        </StackPanel>
+        <StackPanel Margin="3" Orientation="Horizontal">
+            <Label Content="Model" Width="108" />
+            <TextBox x:Name="Model" Text="" materialDesign:HintAssist.Hint="Model" TextWrapping="Wrap" Width="180" RenderTransformOrigin="0.596,0.084" TextChanged="ModelUpdatedButtonClick" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+        </StackPanel>
+        <StackPanel Margin="3" Orientation="Horizontal">
+            <Label x:Name="BatteryText" Content="Battery" RenderTransformOrigin="0.22,-0.281" Width="108"  />
+            <Label x:Name="BatteryLabel" Content=""  Width="180" />
+        </StackPanel>
+        <StackPanel Margin="3" Orientation="Horizontal">
+            <Label x:Name="StatusText" Content="Status" Width="108" />
+            <Label x:Name="StatusLabel" Content=""  RenderTransformOrigin="0.57,0.52" Width="180" />
+        </StackPanel>
+        <StackPanel Margin="3" Orientation="Horizontal">
+            <Label x:Name="ParcelText" Content="parcelId" RenderTransformOrigin="0.22,-0.281" Width="108" />
+            <Label x:Name="ParcelLabel" Content="" Width="180" />
+        </StackPanel>
+        <StackPanel Margin="3" Orientation="Horizontal">
+            <Label x:Name="LocationText" Content="Location" Width="108" />
+            <StackPanel>
+                <Label x:Name="LongtudeText" Content="" Width="180" />
+                <Label x:Name="LatitudeText" Content="" RenderTransformOrigin="0.024,-0.193" Width="180"/>
+            </StackPanel>
+        </StackPanel>
 
-        <TextBlock Text="Drone ID" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="29" FontWeight="Bold" Margin="0,10,0,0"/>
-        <TextBlock Text="Model" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" Width="108" Height="29" Margin="0,2,0,0" FontWeight="Bold"/>
-        <TextBlock Text="weight Category" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Width="108" Height="29" FontWeight="Bold" Margin="0,33,0,0"/>
-        <Label x:Name="WindowTitle" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="42" Width="278" RenderTransformOrigin="0.5,0.5" FontWeight="Bold" FontSize="24" AllowDrop="True" FontFamily="Ink Free" FontStyle="Normal" Margin="0,15,0,0" Background="#FFD1D1D1" Foreground="Blue"/>
+        <Button x:Name="AddingButton" Margin="3" Content="Add New Drone" Width="180" Click="AddDroneButton" />
+        <Button x:Name="UpdateModel" Margin="3" Content="update model" Width="180" Click="UpdateModel_Click"  />
+        <Button x:Name="GoToCharge" Margin="3" Content="go to charge" Width="180" Click="GoToCharge_Click" />
 
+        <Button x:Name="ReliceDroneFromCharge" Margin="3" Content="Uncharge Drone" Width="180" Click="ReliceDroneFromCharge_Click"/>
+        <StackPanel Margin="3" Orientation="Horizontal" HorizontalAlignment="Center" >
+            <Label x:Name="LabelMinutsInCharge" Content="Insert Minutes:"  VerticalAlignment="Center"/>
+            <TextBox x:Name="MinutesInput" Text="" materialDesign:HintAssist.Hint="Minutes in charge" TextWrapping="Wrap" Width="100" RenderTransformOrigin="0.596,0.084" TextChanged="ModelUpdatedButtonClick" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+        </StackPanel>
 
-        <TextBox x:Name="DroneID" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" TextChanged="DroneIdTextChanged" Margin="0,3,0,0" Height="23" Background="#FFD1D1D1"  />
-        <TextBox x:Name="Model" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="2" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontWeight="Bold" RenderTransformOrigin="0.596,0.084" Margin="0,5,0,0" Height="23" TextChanged="ModelUpdatedButtonClick" Background="#FFD1D1D1"/>
-        <ComboBox x:Name="Weight" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" Margin="0,33,0,0" FontWeight="Bold" />
-
-        <Button x:Name="AddingButton" Content="Add New Drone" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" Height="60" Width="300" Click="AddDroneButton" Background="#FFD1D1D1" FontWeight="Bold" Grid.Column="1" Grid.ColumnSpan="2"/>
-        <Button Content="X" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="-1.136,-0.1" Height="32" Width="32" Click="XButton" Grid.Column="3" Background="#FFF90B0B" FontWeight="Bold" FontSize="20" Margin="168,10,0,0"/>
-
-
-        <TextBlock x:Name="BatteryText" Text="Battery" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" FontWeight="Bold" Margin="0,31,0,0" />
-        <Label x:Name="BatteryLabel" Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,33,0,0" Grid.Row="2" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" FontWeight="Bold"/>
-        <TextBlock x:Name="StatusText" Text="Status" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Width="108" FontWeight="Bold"/>
-        <Label x:Name="StatusLabel" Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,3,0,0" Grid.Row="3" VerticalAlignment="Top" Background="#FFD1D1D1" RenderTransformOrigin="0.57,0.52" Width="180" FontWeight="Bold"/>
-        <TextBlock x:Name="ParcelText" Text="parcelId" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="0.22,-0.281" Height="31" Width="108" Margin="0,27,0,0" FontWeight="Bold"/>
-        <Label x:Name="ParcelLabel" Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,31,0,0" Grid.Row="3" VerticalAlignment="Top" Width="180" Background="#FFD1D1D1" FontWeight="Bold"/>
-        <TextBlock x:Name="LocationText" Text="Location" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Top" Width="132" FontWeight="Bold" Margin="0,14,0,0"/>
-        <Label x:Name="LongtudeText" Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,7,0,0" Grid.Row="4" VerticalAlignment="Top" Width="180" FontWeight="Bold" Background="#FFD1D1D1"/>
-        <Label x:Name="LatitudeText" Content="" Grid.Column="2" HorizontalAlignment="Center" Margin="0,33,0,0" Grid.Row="4" VerticalAlignment="Top" RenderTransformOrigin="0.024,-0.193" Width="180" FontWeight="Bold" Background="#FFD1D1D1"/>
-
-
-
-        <Button x:Name="UpdateModel" Content="update model" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Center" Height="42" Width="180" Click="UpdateModel_Click" Margin="5,0,0,0"  />
-        <Button x:Name="GoToCharge" Content="go to charge" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Center" Height="42" Width="180" Click="GoToCharge_Click" Margin="5,0,0,0"/>
-        <Button x:Name="ReliceDroneFromCharge" Content="Uncharge Drone" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Center" Height="42" Width="98" Click="ReliceDroneFromCharge_Click" Margin="5,0,0,0"/>
-
-        <TextBox x:Name="MinutesInput" HorizontalAlignment="Left" Margin="108,32,0,0" Grid.Row="3" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="82" TextChanged="MinutesInputChanged" FontSize="10" Height="20"/>
-        <TextBlock x:Name="LabelMinutsInCharge" Text="Insert Minutes:" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Top" Height="22" Width="82" FontSize="8" Margin="108,7,0,0"/>
-
-        <Button x:Name="DeliveringOption" Content="{Binding Converter={StaticResource stateToText} , UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="5" VerticalAlignment="Top" Height="34" Width="174" Click="Button_Click"  />
-
-        <!--<MediaElement Source="file:images/ajax-loader.gif" LoadedBehavior="Play" Visibility="Visible" />-->
-        <!--<Button x:Name="AssiningParcelToDrone" Content="Assining Parcel To Drone" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="42" Width="180" Click="AssiningParcelToDrone_Click"/>
+        <Button x:Name="DeliveringOption" Margin="3" Content="{Binding Converter={StaticResource stateToText} , UpdateSourceTrigger=PropertyChanged}"  Width="174" Click="Button_Click"  />
+        <ProgressBar x:Name="ProgresDelivery" Value="33" Height="10" />
+        <!--<Button x:Name="AssiningParcelToDrone" Content="Assining ParcFel To Drone" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="42" Width="180" Click="AssiningParcelToDrone_Click"/>
 
         <Button x:Name="PickingUpAParcel" Content="Picking Up A Parcel" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Height="46" Width="180" Click="PickingUpAParcel_Click"/>
 
         <Button x:Name="DliveringParcel" Content="Delivering Parcel" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" RenderTransformOrigin="-1.666,-0.183" Height="41" Width="180" Click="DliveringParcel_Click" Margin="0,12,0,0"/>-->
 
-        <materialDesign:Flipper/>
+        <!--<MediaElement Height="49" Width="103"  />-->
+      
 
-        <ComboBox x:Name="StationSeletor" ItemsSource="{Binding Path=Id}" Grid.Column="3" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Width="143" Height="30" Margin="10,22,0,0"/>
+        
 
-    </Grid>
+        <!--<MediaElement Source="file:images/ajax-loader.gif" LoadedBehavior="Play" Visibility="Visible" />-->
+ 
+    </StackPanel>
 
 </Window>
